--- a/backend/frontend/src/style/Addressess.css
+++ b/backend/frontend/src/style/Addressess.css
@@ -68,6 +68,7 @@ form.address-edit {
   cursor: pointer;
   font-size: 16px;
   color: var(--color-2);
+  transition: background-color 0.3s;
   
 }
 
@@ -92,6 +93,7 @@ form.address-edit {
   font-size: 16px;
   border-radius: var(--button-border-radius);
   padding: var(--button-padding);
+  transition: background-color 0.3s;
 }
 
 .add-address-button:hover {
@@ -122,6 +124,7 @@ form.address-edit {
   cursor: pointer;
   width: 30%;
   margin-top: 1rem;
+  transition: background-color 0.3s;
 }
 
 .address-save-cancel-container .save-button {
