--- a/backend/frontend/src/style/Basket.css
+++ b/backend/frontend/src/style/Basket.css
@@ -34,27 +34,42 @@
   justify-content: center;
   margin-bottom: 20px;
   background-color: #eee;
-  border-radius: 30px;
+  border-radius: var(--button-border-radius);
 }
 
 .delivery-toggle button {
-  padding: 10px 20px;
-  margin: 0 5px;
+  padding: var(--button-padding);
+  margin: 0 1px;
   border: none;
   background-color: #eee;
+  /* background-color: var(--background-color); */
   cursor: pointer;
-  border-radius: 30px;
+  border-radius: var(--button-border-radius);
   flex: 1;
   display: flex;
   flex-direction: column;
   align-items: center;
   font-size: 16px;
   transition: background-color 0.3s ease;
+  color: var(--button-primary-color);
+}
+.delivery-toggle button:hover {
+  background-color: rgba(0, 0, 0, 0.1);
+}
+.delivery-toggle button:active {
+  background-color: rgba(0, 0, 0, 0.3);
 }
 
 .delivery-toggle button.active {
-  background-color: var(--color-2);
+  background-color: var(--button-primary-color);
   color: white;
+}
+.delivery-toggle button.active:hover {
+  background-color: var(--button-primary-hover-color);
+}
+
+.delivery-toggle button.active:active {
+  background-color: var( --button-primary-active-color);
 }
 
 .basket ul {
@@ -92,15 +107,29 @@
 .basket .basket-item-quantity button {
   padding: 5px 10px;
   border: none;
-  border-radius: 20px;
+  border-radius: var(--button-border-radius);
   background-color: #f0f0f0;
   cursor: pointer;
   font-size: 16px;
+  transition: background-color 0.3s ease;
 }
 
-/* .basket .item-quantity button:hover {
-  background-color: #ddd;
-} */
+.basket .basket-item-quantity .subtract {
+  font-size: 18px;
+  padding: 4px 12px;
+  /* padding-left: 1.2rem;
+  padding-right: 1.2rem; */ 
+}
+
+.basket .basket-item-quantity button:hover {
+  /* background-color: #ddd; */
+  background-color: rgba(0, 0, 0, 0.1)
+}
+.basket .basket-item-quantity button:active {
+  background-color: rgba(0, 0, 0, 0.3)
+}
+
+
 
 .basket .basket-item-quantity span {
   padding: 0 10px;
@@ -112,17 +141,22 @@
 }
 
 .basket .basket-remove-button {
-  padding: 5px 10px;
+  padding: 5px 12px;
   border: none;
   border-radius: 20px;
-  background-color: #d34949;
+  /* background-color: #d34949; */
+  background-color: var(--button-delete-color);
   color: white;
   cursor: pointer;
   font-size: 16px;
 }
 
 .basket .basket-remove-button:hover {
-  background-color: #ff1a1a;
+  /* background-color: #ff1a1a; */
+  background-color: var(--button-delete-hover-color);
+}
+.basket .basket-remove-button:active {
+  background-color: var(--button-delete-active-color);
 }
 
 .basket h3 {
@@ -134,16 +168,20 @@
 .basket .basket-checkout-button {
   display: block;
   width: 100%;
-  padding: 10px 30px;
+  padding: var(--button-padding);
   margin-top: 20px;
   border: none;
-  border-radius: 25px;
-  background: var(--color-2);
+  border-radius: var(--button-border-radius);
+  background: var(--button-primary-color);
   color: white;
   cursor: pointer;
   font-size: 18px;
 }
 
 .basket .basket-checkout-button:hover {
-  background-color: var(--color-1);
+  background-color: var(--button-primary-hover-color);
+}
+
+.basket-checkout-button:active {
+  background-color: var(--button-primary-active-color);
 }
