restaurants side buttons styled first take

--- a/backend/frontend/src/App.css
+++ b/backend/frontend/src/App.css
@@ -27,11 +27,13 @@
   --button-secondary-border-color: 1px solid #519259;
   --button-secondary-hover-color: ;
   --button-cancel-primary-color: #fbf9f5;
-  --button-cancel-hover-color: #fbf9f2;
+  --button-cancel-hover-color: #fbf9f2dd;
+  --button-cancel-active-color: #fbf9f280;
   --button-delete-color: rgb(179, 53, 53);
   --button-delete-hover-color: rgb(226, 82, 82);
   --button-delete-active-color: rgb(121, 37, 37);
   --cards-border-radius: 0.8rem;
+  --settings-cards-background: rgba(0, 0, 0, 0.01);
 }
 
 #root {
