--- a/backend/frontend/src/style/RSMenu.css
+++ b/backend/frontend/src/style/RSMenu.css
@@ -10,13 +10,19 @@
 }
 
 .rs-menu-container .create-new-menu-button {
-  background-color: var(--color-1);
-  color: white;
+  background-color: var(--button-primary-color);
+  color: var(--color-5);
   font-size: 1.4rem;
-  padding: 0.8rem 2rem;
+  padding: var(--button-padding);
   border: none;
-  border-radius: 0.6rem;
+  border-radius: var(--button-border-radius);
   cursor: pointer;
+}
+.rs-menu-container .create-new-menu-button:hover {
+  background-color: var(--button-primary-hover-color);
+}
+.rs-menu-container .create-new-menu-button:active {
+  background-color: var(--button-primary-active-color);
 }
 
 .rs-menu-container .add-menu-form {
@@ -37,13 +43,19 @@
 
 .rs-menu-container .add-menu-form button {
   align-self: center;
-  background-color: var(--color-1);
+  background-color: var(--button-primary-color);
   color: white;
   font-size: 1.4rem;
-  padding: 0.8rem 2rem;
+  padding: var(--button-padding);
   border: none;
-  border-radius: 0.6rem;
+  border-radius: var(--button-border-radius);
   cursor: pointer;
+}
+.rs-menu-container .add-menu-form button:hover {
+  background-color: var(--button-primary-hover-color);
+}
+.rs-menu-container .add-menu-form button:active {
+  background-color: var(--button-primary-active-color);
 }
 
 .rs-menu-container .add-menu-form input {
@@ -95,16 +107,32 @@
   display: flex;
 }
 
-.rs-menu-container .edit-keywords .save-keywords-button {
-  background-color: var(--color-1);
+.rs-menu-container .menu-category .edit-form .buttons-container .save1-button {
+  background-color: var(--button-primary-color);
   color: white;
   font-size: 1.4rem;
+  border-radius: var(--button-border-radius);
+}
+.rs-menu-container .menu-category .edit-form .buttons-container .save1-button:hover {
+  background-color: var(--button-primary-hover-color)
+}
+.rs-menu-container .menu-category .edit-form .buttons-container .save1-button:active {
+  background-color: var(--button-primary-active-color)
 }
 
-.rs-menu-container .edit-keywords .cancel-keywords-button {
+
+.rs-menu-container .menu-category .edit-form .buttons-container .cancel1-button {
   font-size: 1.4rem;
-  border: 1px solid var(--color-1);
+  background-color: var(--button-cancel-primary-color);
+  border: 1px solid var(--button-primary-color);
   color: var(--color-1);
+  border-radius: var(--button-border-radius);
+}
+.rs-menu-container .menu-category .edit-form .buttons-container .cancel1-button:hover {
+  background-color: var(--button-cancel-hover-color)
+}
+.rs-menu-container .menu-category .edit-form .buttons-container .cancel1-button:active {
+  background-color: var(--button-cancel-active-color)
 }
 
 .keywords .keywords-edit-icon {
@@ -297,12 +325,19 @@
 .rs-menu-container .edit-button {
   display: block;
   margin: 20px auto;
-  padding: 10px 20px;
+  padding: var(--button-padding);
   color: #fff;
-  background-color: #165e4b;
+  /* background-color: #165e4b; */
+  background-color: var(--button-primary-color);
   border: none;
-  border-radius: 5px;
+  border-radius: var(--button-border-radius);
   cursor: pointer;
+}
+.rs-menu-container .edit-button:hover {
+  background-color: var(--button-primary-hover-color);
+}
+.rs-menu-container .edit-button:active {
+  background-color: var(--button-primary-active-color);
 }
 
 .update-button {
