--- a/backend/frontend/src/style/RSNavbar.css
+++ b/backend/frontend/src/style/RSNavbar.css
@@ -23,17 +23,21 @@
 }
 
 .rs-nav button {
-  padding: 10px 20px;
+  padding: var(--button-padding);
   margin: 0 10px;
   border: none;
-  border-radius: 30px;
+  border-radius: var(--button-border-radius);
   cursor: pointer;
-  background-color: var(--color-1);
+  background-color: var(--button-primary-color);
   color: white;
   font-size: 16px;
   transition: background-color 0.3s ease;
 }
 
 .rs-nav button:hover {
-  background-color: #298b71;
+  /* background-color: #298b71; */
+  background-color: var(--button-primary-hover-color);
+}
+.rs-nav button:active {
+  background-color: var(--button-primary-active-color);
 }
