--- a/backend/frontend/src/style/RSRegisterAndLogin.css
+++ b/backend/frontend/src/style/RSRegisterAndLogin.css
@@ -38,24 +38,27 @@
 }
 
 .rs-register-login-page .toggle-button {
-  padding: 10px 20px;
+  padding: var(--button-padding);
   margin: 0 10px;
-  border: none;
-  border-radius: 30px;
+  border: var(--button-secondary-border-color);
+  border-radius: var(--button-border-radius);
   cursor: pointer;
-  background-color: #266241;
-  color: white;
+  /* background-color: #266241; */
+  background-color: var(--button-primary-color);
+  color: var(--color-5);
   font-size: 16px;
   transition: background-color 0.3s ease;
 }
 
-.rs-register-login-page .toggle-button.active {
-  background-color: #57635c;
+.rs-register-login-page .toggle-button:hover {
+  background-color: var(--button-primary-hover-color);
 }
 
-.rs-register-login-page .toggle-button:hover {
-  background-color: #163825;
+.rs-register-login-page .toggle-button:active {
+  background-color: var(--button-primary-active-color);
 }
+
+
 
 .rs-register-login-page .form-label {
   margin-bottom: 5px;
@@ -100,25 +103,39 @@
   margin-top: 1.6rem;
 }
 
-.rs-register-login-page .buttons-container button {
-  padding: 10px 20px;
-  border-radius: 5px;
+.rs-register-login-page button {
+  padding: var(--button-padding);
+  border-radius: var(--button-border-radius);
   cursor: pointer;
   font-size: 16px;
   transition: background-color 0.3s ease;
-  border: none;
+  border: var(--button-secondary-border-color);
 }
 
-.rs-register-login-page .buttons-container .submit-button {
-  background-color: #266241;
-  color: white;
+.rs-register-login-page .submit-button {
+  background-color: var(--button-primary-color);
+  color: var(--color-5);
 }
 
 .rs-register-login-page .submit-button:hover {
-  background-color: #163825;
+  /* background-color: #163825; */
+  background-color: var(--button-primary-hover-color);
+}
+.rs-register-login-page .submit-button:active {
+  /* background-color: #163825; */
+  background-color: var(--button-primary-active-color);
 }
 
-.rs-register-login-page .buttons-container .cancel-button {
+.rs-register-login-page .cancel-button {
   margin-top: 0;
   width: fit-content;
+  color: var(--button-primary-color)
+}
+.rs-register-login-page .cancel-button:hover {
+  /* background-color: #163825; */
+  background-color: var(--button-cancel-hover-color);
+}
+.rs-register-login-page .cancel-button:active {
+  /* background-color: #163825; */
+  background-color: var(--button-cancel-active-color);
 }
