--- a/backend/frontend/src/style/RegisterAndLogin.css
+++ b/backend/frontend/src/style/RegisterAndLogin.css
@@ -104,7 +104,7 @@
 }
 
 .register-login-page .buttons-container button {
-  padding: 10px 20px;
+  padding: var(--button-padding);
   border-radius: var(--button-border-radius);
   cursor: pointer;
   font-size: 16px;
