--- a/backend/frontend/src/style/Settings.css
+++ b/backend/frontend/src/style/Settings.css
@@ -11,7 +11,9 @@
   display: flex;
   flex-direction: column;
   width: 100%;
-  background-color: #fff;
+  /* background-color: #fff; */
+  /* background-color: rgba(0, 0, 0, 0.01); */
+  background-color: var(--settings-cards-background);
   border-radius: 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   padding: 20px;
