--- a/backend/frontend/src/style/RSMenu.css
+++ b/backend/frontend/src/style/RSMenu.css
@@ -312,14 +312,47 @@
 }
 
 .rs-menu-container .buttons-container .save1-button {
-  background-color: var(--color-1);
-  color: white;
+  background-color: var(--button-primary-color);
+  color: var(--color-5);
 }
 
-.rs-menu-container .buttons-container .cancel1-button {
-  background-color: transparent;
-  color: var(--color-1);
-  border: 1px solid var(--color-1);
+.rs-menu-container .menu-category .edit-form .buttons-container .cancel1-button {
+  background-color: var(--button-cancel-exp-primary);
+  color: var(--button-primary-color);
+  border: 1px solid var(--button-primary-color);
+}
+.rs-menu-container .menu-category .edit-form .buttons-container .cancel1-button:hover {
+  background-color: var(--button-cancel-exp-hover);
+}
+.rs-menu-container .menu-category .edit-form .buttons-container .cancel1-button:active {
+  background-color: var(--button-cancel-exp-active);
+}
+
+.rs-menu-container .buttons-container .save-keywords-button {
+  background-color: var(--button-primary-color);
+  color: var(--color-5);
+  border-radius: var(--button-border-radius);
+  padding: var(--button-padding);
+}
+.rs-menu-container .buttons-container .save-keywords-button:hover {
+  background-color: var(--button-primary-hover-color);
+}
+.rs-menu-container .buttons-container .save-keywords-button:active {
+  background-color: var(--button-primary-active-color);
+}
+
+.rs-menu-container .buttons-container .cancel-keywords-button {
+  background-color: var(--button-cancel-exp-primary);
+  color: var(--button-primary-color);
+  border-radius: var(--button-border-radius);
+  padding: var(--button-padding);
+  border: 1px solid var(--button-primary-color)
+}
+.rs-menu-container .buttons-container .cancel-keywords-button:hover {
+  background-color: var(--button-cancel-exp-hover);
+}
+.rs-menu-container .buttons-container .cancel-keywords-button:active {
+  background-color: var(--button-cancel-exp-active);
 }
 
 .rs-menu-container .edit-button {
