--- a/backend/frontend/src/style/RSProfile.css
+++ b/backend/frontend/src/style/RSProfile.css
@@ -7,6 +7,7 @@
   margin: 0 auto;
   padding: 0 20px;
   border-radius: 8px;
+  /* background-color: var(--background-color); */
 }
 
 .basic-info,
@@ -31,12 +32,13 @@ h3 {
   justify-content: center;
   gap: 2rem;
   margin-top: 4rem;
+  
 }
 
 .rs-profile-section {
   margin: 10px 0;
   padding: 10px;
-
+  /* background-color: var(--shadow-light); */
   border-radius: 5px;
 }
 
@@ -108,17 +110,19 @@ strong {
 .rs-profile-section .buttons-container .cancel-button {
   /* display: block; */
   padding: var(--button-padding);
-  background-color: transparent;
+  /* background-color: transparent; */
+  /* background-color: var(--button-cancel-primary-color); */
+  background-color: var(--button-cancel-exp-primary);
   border: 1px solid var(--button-primary-color);
   border-radius: var(--button-border-radius);
   cursor: pointer;
   color: var(--button-primary-color);
 }
 .rs-profile-section .buttons-container .cancel-button:hover {
-  background-color: var(--button-cancel-hover-color);
+  background-color: var(--button-cancel-exp-hover);
 }
 .rs-profile-section .buttons-container .cancel-button:active {
-  background-color: var(--button-cancel-active-color);
+  background-color: var(--button-cancel-exp-active);
 }
 
 .rs-profile-section .edit-button:hover {
