--- a/backend/frontend/src/style/SearchResults.css
+++ b/backend/frontend/src/style/SearchResults.css
@@ -46,33 +46,41 @@
 
   .restaurant-info {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
   }
 
   .restaurant-info h1 {
     padding: 1rem;
-    width: 100%;
+    padding-bottom: none;
+    width: 45%;
   }
 
   /* Restaurant card details */
   .restaurant-card {
     padding: 1rem;
     display: flex;
-    gap: 3rem;
+    flex-direction: column;
+    gap: 1rem;
+    min-width: 45%;
   }
 
   .restaurant-card .restaurant-details {
-    min-width: 40%;
+    min-width: 45%;
+    padding-left: 1rem;
   }
 
   .restaurant-card small {
     color: #888;
     font-size: 14px;
   }
-
+  .restaurant-current-offers {
+    padding: 1rem;
+    margin-top: 2rem;
+  }
   .restaurant-current-offers div {
     font-size: 18px;
     font-weight: 600;
+    padding-bottom: 1rem;
   }
 
   .restaurant-current-offers ul {
