--- a/backend/frontend/src/style/RSOrdersHistory.css
+++ b/backend/frontend/src/style/RSOrdersHistory.css
@@ -35,7 +35,7 @@
 
 .rs-orderHistory-container .cards {
   background: #fbfffc;
-  border-radius: 8px;
+  border-radius: var(--cards-border-radius);
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   margin: 20px 0;
   padding: 20px;
