--- a/backend/frontend/src/style/SuccessPage.css
+++ b/backend/frontend/src/style/SuccessPage.css
@@ -22,7 +22,7 @@
 
 .success-card {
   background-color: white;
-  border-radius: 8px;
+  border-radius: var(--cards-border-radius);
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   padding: 20px;
   text-align: center;
@@ -45,7 +45,7 @@
   text-align: left;
   width: 100%;
   background-color: white;
-  border-radius: 8px;
+  border-radius: var(--cards-border-radius);
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   padding: 20px;
 }
