--- a/backend/frontend/src/style/RSOrdersActive.css
+++ b/backend/frontend/src/style/RSOrdersActive.css
@@ -50,7 +50,7 @@
 
 .rs-orders-active-container .cards {
   background: white;
-  border-radius: 8px;
+  border-radius: var(--cards-border-radius);
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   margin: 20px;
   padding: 20px;
