--- a/backend/frontend/src/style/RestaurantMenu.css
+++ b/backend/frontend/src/style/RestaurantMenu.css
@@ -59,7 +59,7 @@
     width: 280px;
     /* height: 300px; */
     background-color: #fff;
-    border-radius: 8px;
+    border-radius: var(--cards-border-radius);
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     overflow: hidden;
     transition: transform 0.3s ease;
@@ -87,7 +87,7 @@
   }
 
   .offer-item-card {
-    border-radius: 8px;
+    border-radius: var(--cards-border-radius);
     /* cursor: pointer; */
     display: flex;
     justify-content: space-between;
@@ -177,7 +177,7 @@
     padding: 1rem;
     background-color: white;
     box-shadow: 0 0px 10px rgba(0, 0, 0, 0.15);
-    border-radius: 10px;
+    border-radius: var(--cards-border-radius);
   }
 
   .item-details:hover {
