--- a/backend/frontend/src/style/Footer.css
+++ b/backend/frontend/src/style/Footer.css
@@ -1,8 +1,9 @@
 .footer {
   background-color: var(--color-1);
   color: #fff;
-  padding: 20px 0;
+  padding: 2rem 0;
   text-align: center;
+  /* height: 25rem; */
 }
 
 .footer-content {
@@ -12,22 +13,22 @@
   flex-wrap: wrap;
   max-width: 1200px;
   margin: 0 auto;
-  padding: 0 20px;
+  padding: 0 2rem;
 }
 
 .footer-section {
   flex: 1;
-  margin: 10px;
+  margin: 1rem;
 }
 
 .footer-section h2 {
-  margin-bottom: 15px;
-  font-size: 18px;
+  margin-bottom: 1.5rem;
+  font-size: 1.8rem;
 }
 
 .footer-section p,
 .footer-section ul {
-  font-size: 14px;
+  font-size: 1.4rem;
 }
 
 .footer-section ul {
@@ -36,7 +37,7 @@
 }
 
 .footer-section ul li {
-  margin-bottom: 10px;
+  margin-bottom: 1rem;
 }
 
 .footer-section ul li a {
@@ -55,8 +56,8 @@
 }
 
 .social-icon {
-  margin: 0 20px;
-  font-size: 20px;
+  margin: 0 2rem;
+  font-size: 2rem;
   transition: color 0.3s;
 }
 
@@ -69,6 +70,6 @@
 }
 
 .footer-bottom {
-  margin-top: 20px;
-  font-size: 14px;
+  margin-top: 2rem;
+  font-size: 1.4rem;
 }
