--- a/backend/frontend/src/App.css
+++ b/backend/frontend/src/App.css
@@ -30,6 +30,7 @@
   --button-delete-hover-color: rgb(226, 82, 82);
   --button-delete-active-color: rgb(121, 37, 37);
   --cards-border-radius: 0.8rem;
+  --cards-background-color: #fbfffc;
 }
 
 #root {
@@ -38,7 +39,7 @@
 
 body {
   font-size: 1.6rem;
-  color: var(--color-1);
+  color: #444;
   min-height: 100vh;
   background-color: var(--background-color);
   margin: 0;
@@ -49,7 +50,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh;
+  min-height: 100vh;
 }
 
 .menu-card .favorite-icon-container {
@@ -65,5 +66,5 @@ body {
   font-size: 2.5em;
   color: #333;
   text-align: center;
-  margin-bottom: 10px;
+  margin-bottom: 1rem;
 }
