--- a/backend/frontend/src/style/Basket.css
+++ b/backend/frontend/src/style/Basket.css
@@ -1,28 +1,28 @@
 /* Basket.css */
 
 .basket-container {
-  margin-top: 40px;
+  margin-top: 4rem;
   position: sticky;
   top: 0;
   right: 0;
   overflow-y: auto;
-  padding: 20px;
+  padding: 2rem;
   background-color: #fff;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  border-radius: 8px;
+  border-radius: 0.8rem;
   max-width: 400px;
   margin-left: auto;
 }
 
 .basket {
-  padding: 20px;
-  width: 300px;
+  padding: 2rem;
+  width: 30rem;
 }
 
 .basket h2 {
   text-align: center;
-  margin-bottom: 20px;
-  font-size: 24px;
+  margin-bottom: 2rem;
+  font-size: 2.4rem;
 }
 
 .basket p {
@@ -32,23 +32,23 @@
 .delivery-toggle {
   display: flex;
   justify-content: center;
-  margin-bottom: 20px;
+  margin-bottom: 2rem;
   background-color: #eee;
-  border-radius: 30px;
+  border-radius: 3rem;
 }
 
 .delivery-toggle button {
-  padding: 10px 20px;
-  margin: 0 5px;
+  padding: 1rem 2rem;
+  margin: 0 0.5rem;
   border: none;
   background-color: #eee;
   cursor: pointer;
-  border-radius: 30px;
+  border-radius: 3rem;
   flex: 1;
   display: flex;
   flex-direction: column;
   align-items: center;
-  font-size: 16px;
+  font-size: 1.6rem;
   transition: background-color 0.3s ease;
 }
 
@@ -63,12 +63,12 @@
 }
 
 .basket-item {
-  padding: 10px 0;
+  padding: 1rem 0;
   border-bottom: 1px solid #eee;
 }
 
 .basket .basket-item-details {
-  margin-bottom: 10px;
+  margin-bottom: 1rem;
 }
 
 .basket .basket-item-name {
@@ -86,16 +86,16 @@
 .basket .basket-item-quantity {
   display: flex;
   align-items: center;
-  gap: 5px;
+  gap: 0.5rem;
 }
 
 .basket .basket-item-quantity button {
-  padding: 5px 10px;
+  padding: 0.5rem 1rem;
   border: none;
-  border-radius: 20px;
+  border-radius: 2rem;
   background-color: #f0f0f0;
   cursor: pointer;
-  font-size: 16px;
+  font-size: 1.6rem;
 }
 
 /* .basket .item-quantity button:hover {
@@ -103,7 +103,7 @@
 } */
 
 .basket .basket-item-quantity span {
-  padding: 0 10px;
+  padding: 0 1rem;
   /* font-size: 1.3rem; */
 }
 
@@ -112,13 +112,13 @@
 }
 
 .basket .basket-remove-button {
-  padding: 5px 10px;
+  padding: 0.5rem 1rem;
   border: none;
-  border-radius: 20px;
+  border-radius: 2rem;
   background-color: #d34949;
   color: white;
   cursor: pointer;
-  font-size: 16px;
+  font-size: 1.6rem;
 }
 
 .basket .basket-remove-button:hover {
@@ -127,21 +127,21 @@
 
 .basket h3 {
   text-align: center;
-  margin-top: 20px;
-  font-size: 20px;
+  margin-top: 2rem;
+  font-size: 2rem;
 }
 
 .basket .basket-checkout-button {
   display: block;
   width: 100%;
-  padding: 10px 30px;
-  margin-top: 20px;
+  padding: 1rem 3rem;
+  margin-top: 2rem;
   border: none;
-  border-radius: 25px;
+  border-radius: 2.5rem;
   background: var(--color-2);
   color: white;
   cursor: pointer;
-  font-size: 18px;
+  font-size: 1.8rem;
 }
 
 .basket .basket-checkout-button:hover {
