--- a/backend/frontend/src/style/CustomModal.css
+++ b/backend/frontend/src/style/CustomModal.css
@@ -13,16 +13,16 @@
 
 .modal-content {
   background: white;
-  padding: 20px;
-  border-radius: 5px;
+  padding: 2rem;
+  border-radius: 0.5rem;
   position: relative;
   color: black;
 }
 
 .modal-close-button {
   position: absolute;
-  top: 10px;
-  right: 10px;
+  top: 1rem;
+  right: 1rem;
   background: transparent;
   border: none;
   font-size: 1.5rem;
