--- a/backend/frontend/src/style/RSHomePage.css
+++ b/backend/frontend/src/style/RSHomePage.css
@@ -1,15 +1,8 @@
 /* RSHomePage.css */
 
-/* body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-    background-color: #f8f9fa;
-  } */
-
 .rs-components {
   height: 80vh;
-  margin-top: 75px;
+  margin-top: 7.5rem;
 }
 
 .rs-content-profile {
