--- a/backend/frontend/src/style/RSNavStatus.css
+++ b/backend/frontend/src/style/RSNavStatus.css
@@ -1,29 +1,28 @@
 /* RSNavStatus.css */
 
 .rs-nav-status {
-    display: flex;
-    align-items: center;
-  }
-  
-  .rs-nav-status div {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    position: relative;
-    margin-right: 20px;
-  }
-  
-  .rs-item-count {
-    position: absolute;
-    top: -20px;
-    font-size: 12px;
-    background-color: red;
-    color: #fff;
-    border-radius: 50%;
-    width: 20px;
-    height: 20px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
-  
+  display: flex;
+  align-items: center;
+}
+
+.rs-nav-status div {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  position: relative;
+  margin-right: 2rem;
+}
+
+.rs-item-count {
+  position: absolute;
+  top: -2rem;
+  font-size: 1.2rem;
+  background-color: red;
+  color: #fff;
+  border-radius: 50%;
+  width: 2rem;
+  height: 2rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
