--- a/backend/frontend/src/style/RSProfile.css
+++ b/backend/frontend/src/style/RSProfile.css
@@ -1,12 +1,10 @@
 /* ******** RSProfile.css ********* */
 
-/* RSProfile.css */
-
 .rs-profile-container {
   max-width: 900px;
   margin: 0 auto;
-  padding: 0 20px;
-  border-radius: 8px;
+  padding: 0 2rem;
+  border-radius: 0.8rem;
 }
 
 .basic-info,
@@ -14,16 +12,15 @@
 .address,
 .digital-presence,
 .opening-hours {
-  /* border: 1px solid #ddd; */
   margin: 2rem;
-  border-radius: 8px;
+  border-radius: 0.8rem;
   padding: 2rem;
   background-color: #fbfffc;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
 h3 {
-  padding-bottom: 5px;
+  padding-bottom: 0.5rem;
 }
 
 .rs-profile-container .buttons-container {
@@ -34,10 +31,9 @@ h3 {
 }
 
 .rs-profile-section {
-  margin: 10px 0;
-  padding: 10px;
-
-  border-radius: 5px;
+  margin: 1rem 0;
+  padding: 1rem;
+  border-radius: 0.5rem;
 }
 
 .rs-profile-section .label {
@@ -71,7 +67,7 @@ h3 {
 }
 
 .rs-profile-section div {
-  margin: 5px 0;
+  margin: 0.5rem 0;
 }
 
 strong {
@@ -80,30 +76,30 @@ strong {
 
 .rs-profile-section .edit-button {
   display: block;
-  padding: 10px 20px;
+  padding: 1rem 2rem;
   margin: 2rem auto 1rem;
   color: #fff;
   background-color: var(--color-1);
   border: none;
-  border-radius: 5px;
+  border-radius: 0.5rem;
   cursor: pointer;
 }
 
 .rs-profile-section .save-button {
-  padding: 10px 20px;
+  padding: 1rem 2rem;
   color: #fff;
   background-color: var(--color-1);
   border: none;
-  border-radius: 5px;
+  border-radius: 0.5rem;
   cursor: pointer;
 }
 
 .rs-profile-section .buttons-container .cancel-button {
   /* display: block; */
-  padding: 10px 20px;
+  padding: 1rem 2rem;
   background-color: transparent;
   border: 1px solid #165e4b;
-  border-radius: 5px;
+  border-radius: 0.5rem;
   cursor: pointer;
 }
 
@@ -117,7 +113,7 @@ strong {
   border: none;
   background-color: var(--button-delete-color);
   color: #fff;
-  border-radius: 5px;
+  border-radius: 0.5rem;
   font-size: 1.6rem;
   margin: 0 auto;
   cursor: pointer;
