--- a/backend/frontend/src/style/RSRegisterAndLogin.css
+++ b/backend/frontend/src/style/RSRegisterAndLogin.css
@@ -11,7 +11,6 @@
   margin-bottom: 2rem;
   text-align: center;
   font-size: 3rem;
-  /* text-decoration: underline; */
 }
 
 .rs-register-login-page .rs-form {
@@ -22,30 +21,30 @@
   padding: 2rem;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   max-width: 600px;
-  border-radius: 15px;
-  gap: 5px;
+  border-radius: 1.5rem;
+  gap: 0.5rem;
 }
 
 .rs-register-login-page .rs-form .form-items-line {
   display: flex;
-  gap: 10px;
+  gap: 1rem;
 }
 
 .rs-register-login-page .rs-form .name-fields {
   display: flex;
   flex-direction: column;
-  gap: 8px;
+  gap: 0.8rem;
 }
 
 .rs-register-login-page .toggle-button {
-  padding: 10px 20px;
-  margin: 0 10px;
+  padding: 1rem 2rem;
+  margin: 0 1rem;
   border: none;
-  border-radius: 30px;
+  border-radius: 3rem;
   cursor: pointer;
   background-color: #266241;
   color: white;
-  font-size: 16px;
+  font-size: 1.6rem;
   transition: background-color 0.3s ease;
 }
 
@@ -58,15 +57,15 @@
 }
 
 .rs-register-login-page .form-label {
-  margin-bottom: 5px;
-  font-size: 14px;
+  margin-bottom: 0.5rem;
+  font-size: 1.4rem;
 }
 
 .rs-register-login-page .form-label select {
-  padding: 8px;
-  margin-top: 5px;
+  padding: 0.8rem;
+  margin-top: 0.5rem;
   border: 1px solid #eee2e2;
-  border-radius: 5px;
+  border-radius: 0.5rem;
   background-color: white;
 }
 
@@ -76,10 +75,10 @@
 }
 
 .rs-register-login-page .form-input {
-  padding: 8px;
-  margin-top: 5px;
+  padding: 0.8rem;
+  margin-top: 0.5rem;
   border: 1px solid #eee2e2;
-  border-radius: 5px;
+  border-radius: 0.5rem;
 }
 
 .rs-register-login-page .form-input:focus {
@@ -89,22 +88,21 @@
 
 .rs-register-login-page .checkbox-form-label {
   display: flex;
-  margin-top: 5px;
+  margin-top: 0.5rem;
 }
 
 .rs-register-login-page .buttons-container {
   display: flex;
   justify-content: center;
   gap: 2rem;
-  /* align-items: center; */
   margin-top: 1.6rem;
 }
 
 .rs-register-login-page .buttons-container button {
-  padding: 10px 20px;
+  padding: 1rem 2rem;
   border-radius: 5px;
   cursor: pointer;
-  font-size: 16px;
+  font-size: 1.6rem;
   transition: background-color 0.3s ease;
   border: none;
 }
