--- a/backend/frontend/src/style/Settings.css
+++ b/backend/frontend/src/style/Settings.css
@@ -3,8 +3,7 @@
 .settings-container {
   max-width: 600px;
   margin: 0 auto;
-  padding: 20px;
-  font-family: Arial, sans-serif;
+  padding: 2rem;
 }
 
 .settings-form {
@@ -12,23 +11,23 @@
   flex-direction: column;
   width: 100%;
   background-color: #fff;
-  border-radius: 10px;
+  border-radius: 1rem;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  padding: 20px;
+  padding: 2rem;
 }
 
 .settings-form h2 {
-  margin-bottom: 20px;
+  margin-bottom: 2rem;
   color: #333;
   text-align: center;
 }
 
 .settings-form input {
-  margin-bottom: 15px;
-  padding: 10px;
+  margin-bottom: 1.5rem;
+  padding: 1rem;
   border: 1px solid #ccc;
-  border-radius: 5px;
-  font-size: 16px;
+  border-radius: 0.5rem;
+  font-size: 1.6rem;
   width: 100%;
   box-sizing: border-box;
 }
@@ -36,7 +35,7 @@
 .settings-actions {
   display: flex;
   justify-content: flex-end;
-  margin-left: 20px;
+  margin-left: 2rem;
 }
 
 .settings-inputs-container div {
@@ -48,8 +47,8 @@
 }
 
 .form-input {
-  padding: 8px;
-  font-size: 16px;
+  padding: 0.8rem;
+  font-size: 1.6rem;
 }
 
 .password-input {
@@ -58,31 +57,33 @@
 
 .settings-password-toggle-icon {
   position: absolute;
-  right: 10px;
+  right: 1rem;
   top: 40%;
   transform: translateY(-50%);
   cursor: pointer;
 }
+
 .settings-save-cancel-button-container {
   display: flex;
   justify-content: space-around;
 }
+
 .settings-edit {
   background: none;
   border: none;
   cursor: pointer;
-  font-size: 16px;
+  font-size: 1.6rem;
   color: var(--color-2);
 }
 
 .settings-save {
   width: 36%;
-  padding: 10px;
+  padding: 1rem;
   background-color: var(--color-2);
   color: #fff;
   border: none;
-  border-radius: 5px;
-  font-size: 16px;
+  border-radius: 0.5rem;
+  font-size: 1.6rem;
   cursor: pointer;
   transition: background-color 0.3s;
   align-self: center;
@@ -90,12 +91,12 @@
 
 .settings-cancel {
   width: 36%;
-  padding: 10px;
+  padding: 1rem;
   background-color: #fff;
   color: var(--color-2);
   border: 1px solid var(--color-2);
-  border-radius: 5px;
-  font-size: 16px;
+  border-radius: 0.5rem;
+  font-size: 1.6rem;
   cursor: pointer;
   transition: background-color 0.3s;
   align-self: center;
@@ -107,9 +108,9 @@
 
 .settings-save,
 .settings-cancel {
-  padding: 8px 16px;
+  padding: 0.8rem 1.6rem;
   border: none;
-  border-radius: 4px;
+  border-radius: 0.4rem;
   cursor: pointer;
   width: 30%;
 }
@@ -131,25 +132,25 @@
   color: var(--color-3);
   margin: 0 auto;
 }
+
 .settings-cancel:hover {
   background-color: #ffe;
 }
 
-/*  */
 .settings-delete {
   background-color: #c36764;
 
   display: block;
   margin: 0 auto;
-  margin-top: 20px;
+  margin-top: 2rem;
   width: 40%;
   min-width: 100px;
-  padding: 10px 0;
+  padding: 1rem 0;
   color: white;
   border: none;
-  border-radius: 5px;
+  border-radius: 0.5rem;
   cursor: pointer;
-  font-size: 16px;
+  font-size: 1.6rem;
 }
 
 .settings-delete:hover {
