--- a/backend/frontend/src/style/SuccessPage.css
+++ b/backend/frontend/src/style/SuccessPage.css
@@ -17,47 +17,46 @@
   display: flex;
   flex-direction: column;
   max-width: 300px;
-  /* margin-right: 50px; */
 }
 
 .success-card {
   background-color: white;
-  border-radius: 8px;
+  border-radius: 0.8rem;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  padding: 20px;
+  padding: 2rem;
   text-align: center;
-  margin-bottom: 20px;
+  margin-bottom: 2rem;
   width: 100%;
 }
 
 .success-title {
-  font-size: 24px;
+  font-size: 2.4rem;
   font-weight: bold;
 }
 
 .success-message {
-  font-size: 18px;
+  font-size: 1.8rem;
   color: #666;
 }
 
 .success-card-order-details {
-  margin-bottom: 20px;
+  margin-bottom: 2rem;
   text-align: left;
   width: 100%;
   background-color: white;
-  border-radius: 8px;
+  border-radius: 0.8rem;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  padding: 20px;
+  padding: 2rem;
 }
 
 .success-card-order-details h2 {
-  margin: 8px;
+  margin: 0.8rem;
 }
 
 .success-card-order-details p {
-  font-size: 16px;
-  margin: 8px 0;
-  padding: 10px;
+  font-size: 1.6rem;
+  margin: 0.8rem 0;
+  padding: 1rem;
   border-bottom: 1px solid #ddd;
 }
 
@@ -67,9 +66,9 @@
 }
 
 .success-total {
-  font-size: 18px;
+  font-size: 1.8rem;
   font-weight: bold;
-  margin-top: 20px;
+  margin-top: 2rem;
   text-align: end;
 }
 
